instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:21: error: not found: value forwar
forwar() //fin du G//
^