instructions.InstructionsDrawG.scala.code
brushDown()
left()
forward()
forward()
forward()
forward()
left()
forward()
forward()
forward()
forward()
left()
forward()
forward()
forward()
forward()
left()
forward()
forward()
left()
forwar() //fin du G//
brushUp()
right()
forward()
right()
forward()
left() /*case depart*/